Add features for deployment